--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 // Core colors
 $primary-color: #2d91ff;
 $primary-color-dark: darken($primary-color, 3%);
+$primary-color-darkest: #0052ac;
 $primary-color-light: lighten($primary-color, 3%);
 $secondary-color: lighten($primary-color, 37.5%);
 $secondary-color-dark: darken($secondary-color, 3%);
@@ -12,6 +13,7 @@ $light-color: #fff;
 $gray-color: lighten($dark-color, 40%);
 $gray-color-dark: darken($gray-color, 25%);
 $gray-color-light: lighten($gray-color, 20%);
+$gray-color-lightest: #eee;
 
 $border-color: lighten($dark-color, 60%);
 $border-color-dark: darken($border-color, 10%);
@@ -20,15 +22,15 @@ $bg-color-dark: darken($bg-color, 3%);
 $bg-color-light: $light-color;
 
 // Control colors
-$success-color: #32b643;
-$warning-color: #ffb700;
-$error-color: #ff7c7c;
+$success-color: #4cd964;
+$warning-color: #ffb200;
+$error-color: #ff3b30;
 
 // Other colors
 $code-color: #e06870;
 $highlight-color: #ffe9b3;
 $body-bg: $bg-color-light;
-$body-font-color: lighten($dark-color, 5%);
+$body-font-color: #575757;
 $link-color: $primary-color;
 $link-color-dark: darken($link-color, 5%);
 
@@ -36,7 +38,7 @@ $link-color-dark: darken($link-color, 5%);
 // Credit: https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
 $base-font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto;
 $mono-font-family: "SF Mono", "Segoe UI Mono", "Roboto Mono", Menlo, Courier, monospace;
-$fallback-font-family: "Helvetica Neue", sans-serif;
+$fallback-font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $cjk-zh-font-family: $base-font-family, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", $fallback-font-family;
 $cjk-jp-font-family: $base-font-family, "Hiragino Sans", "Hiragino Kaku Gothic Pro", "Yu Gothic", YuGothic, Meiryo, $fallback-font-family;
 $cjk-ko-font-family: $base-font-family, "Malgun Gothic", $fallback-font-family;
@@ -44,7 +46,7 @@ $body-font-family: $base-font-family, $fallback-font-family;
 
 // Unit sizes
 $unit-o: .05rem;
-$unit-h: .1rem;
+$unit-h: .15rem;
 $unit-1: .2rem;
 $unit-2: .4rem;
 $unit-3: .6rem;
@@ -61,8 +63,8 @@ $unit-16: 3.2rem;
 // Font sizes
 $html-font-size: 20px;
 $html-line-height: 1.5;
-$font-size: .8rem;
-$font-size-sm: .7rem;
+$font-size: .7rem;
+$font-size-sm: .6rem;
 $font-size-lg: .9rem;
 $line-height: 1rem;
 
