Styling tab components

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -60,6 +60,7 @@
 @import "pagination";
 @import "toast";
 @import "accordions";
+@import "tabs";
 
 // Utility classes
 @import "../../node_modules/spectre.css/src/animations";
