--- a/frontend/src/scss/_accordions.scss
+++ b/frontend/src/scss/_accordions.scss
@@ -2,9 +2,9 @@
   .accordion-header {
     border: .05rem solid $border-color;
     border-radius: .15rem;
-    line-height: .8rem;
+    line-height: 1rem;
     font-size: .7rem;
-    padding: .8rem 1.8rem .8rem .8rem;
+    padding: .35rem .4rem;
     position: relative;
     outline: none;
 
@@ -13,7 +13,7 @@
       height: .8rem;
       position: absolute;
       right: .8rem;
-      top: .8rem;
+      top: .5rem;
       width: .8rem;
     }
 
