Add form select

--- a/frontend/src/scss/_accordions.scss
+++ b/frontend/src/scss/_accordions.scss
@@ -34,7 +34,7 @@
 
     .menu {
       border-radius: $border-radius;
-      border: .05rem solid #575757;
+      border: .05rem solid $border-color-dark;
       margin-top: .4rem;
       padding: 0;
       transform: none;
