--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -1,50 +1,16 @@
 // Tables
 .table {
+  svg {
+    width: .7rem;
+    height: .7rem;
+    vertical-align: text-bottom;
+    color: $primary-color;
+  }
   &.table-hover {
-    thead {
-      tr {
-        font-weight: 700;
-      }
-    }
-
     tbody {
       tr {
         &:hover {
           background: $secondary-color;
-        }
-
-        &.active {
-          background: $secondary-color;
-        }
-      }
-    }
-  }
-
-  td,
-  th {
-    border-bottom: 0;
-    vertical-align: middle;
-  }
-
-  .accordion {
-    .accordion-header {
-      border: 0;
-      padding-left: 0;
-      position: static;
-
-      svg {
-        position: relative;
-        top: .15rem;
-        right: 0;
-        left: .2rem;
-      }
-    }
-
-    input:checked {
-    + label {
-        path {
-          transform-origin: 50% 50% 0px;
-          transform: rotate(180deg);
         }
       }
     }
