--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -25,7 +25,6 @@
 @import 'buttons';
 @import 'forms';
 @import 'labels';
-@import 'media';
 
 // Layout
 @import '../../node_modules/spectre.css/src/layout';
@@ -58,11 +57,10 @@
 @import '../../node_modules/spectre.css/src/tooltips';
 
 // Override spectre.css Components
-@import "pagination";
-@import "toast";
-@import "accordions";
-@import "dropdowns";
-@import "tabs";
+@import 'pagination';
+@import 'toast';
+@import 'accordions';
+//@import "tabs";
 
 // Utility classes
 @import '../../node_modules/spectre.css/src/animations';
