--- a/frontend/src/scss/_labels.scss
+++ b/frontend/src/scss/_labels.scss
@@ -1,11 +1,7 @@
 // Labels
 .label {
-  line-height: 1;
-  width: 4rem;
-  height: 1.6rem;
-  padding: .4rem 0;
+  padding: .4rem;
   text-align: center;
-  display: inline-block;
 
   // Label rounded
   &.label-rounded {
@@ -14,24 +10,24 @@
     padding-right: .4rem;
   }
 
-  // Label colors
-  &.label-primary {
-    @include label-variant($primary-color, rgba($primary-color, .3));
-  }
+   //Label colors
+  //&.label-primary {
+    //@include label-variant($primary-color, rgba($primary-color, .3));
+  //}
 
-  &.label-secondary {
-    @include label-variant($primary-color, $secondary-color);
-  }
+  //&.label-secondary {
+    //@include label-variant($primary-color, $secondary-color);
+  //}
 
-  &.label-success {
-    @include label-variant($success-color, rgba($success-color, .3));
-  }
+  //&.label-success {
+    //@include label-variant($success-color, rgba($success-color, .3));
+  //}
 
-  &.label-warning {
-    @include label-variant($warning-color, rgba($warning-color, .3));
-  }
+  //&.label-warning {
+    //@include label-variant($warning-color, rgba($warning-color, .3));
+  //}
 
-  &.label-error {
-    @include label-variant($error-color, rgba($error-color, .3));
-  }
+  //&.label-error {
+    //@include label-variant($error-color, rgba($error-color, .3));
+  //}
 }
