add navs and override class

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -57,6 +57,7 @@
 @import '../../node_modules/spectre.css/src/tooltips';
 
 // Override spectre.css Components
+@import 'navs';
 @import 'pagination';
 @import 'toast';
 @import 'accordions';
