Make header fixed

--- a/frontend/src/scss/_utilities.scss
+++ b/frontend/src/scss/_utilities.scss
@@ -4,4 +4,5 @@
   height: .8rem;
 }
 
+@include margin-variant(4, $unit-4); //Margin variant .8rem
 @include padding-variant(4, $unit-4); //Padding variation .8rem
