--- a/frontend/src/scss/_base.scss
+++ b/frontend/src/scss/_base.scss
@@ -1,3 +1,21 @@
+.app-container {
+  display: flex;
+  justify-content: flex-start;
+  position: relative;
+  top: 2.4rem;
+}
+
+.main {
+  background: $gray-color-lightest;
+  padding: .8rem 2rem 0 2rem;
+  margin-left: 10rem;
+}
+
+.content {
+  padding: .8rem;
+  background: $light-color;
+}
+
 svg {
   width: .8rem;
   height: .8rem;
