--- a/frontend/src/scss/_navbar.scss
+++ b/frontend/src/scss/_navbar.scss
@@ -1,6 +1,11 @@
 .navbar {
+  background: $light-color;
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .1);
+  height: 2.4rem;
   padding: .4rem 0;
+  position: fixed;
+  width: 100%;
+  z-index: $zindex-4;
 
   .dropdown {
 
