--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,22 +5,27 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1">
 
-<title>Punch</title>
-<meta name="title" content="Punch">
-<meta name="description" content="">
-<meta property="og:title" content="Punch">
-<meta property="og:site_name" content="">
-<meta property="og:description" content="">
-<meta property="og:url" content="">
-<meta property="og:image" content="">
-<meta property="og:type" content="website">
+<title>1Punch</title>
+<meta name="description" content="1Punch description">
 
-<link rel="stylesheet" href="/css/main.css">
-<%= csrf_meta_tag %>
+<link rel="dns-prefetch" href="">
+
+<link rel="shortcut icon" type="image/x-icon" href="">
+<link rel="apple-touch-icon" sizes="180x180" href="">
+<link rel="apple-touch-icon" sizes="152x152" href="">
+<link rel="apple-touch-icon" sizes="120x120" href="">
+<link rel="apple-touch-icon" sizes="76x76" href="">
+<link rel="icon" sizes="192x192" href="">
+
+<link rel="stylesheet" href="<%= @webpack_assets['app.css'] %>">
 </head>
 
 <body>
-<%= yield %>
+<div id="app">
+</div>
 </body>
 
+<script type="text/javascript" src="<%= @webpack_assets['manifest.js'] %>"></script>
+<script type="text/javascript" src="<%= @webpack_assets['vendor.js'] %>"></script>
+<script type="text/javascript" src="<%= @webpack_assets['app.js'] %>"></script>
 </html>
