--- a/app/views/password_reset_mailer/create.html.erb
+++ b/app/views/password_reset_mailer/create.html.erb
@@ -2,11 +2,9 @@ Hi <%= @user.name %>,
 
 We heard that you lost your 1Punch password. Sorry about that!
 
-But don’t worry! You can use the following link to reset your password:
+You can use the following link to reset your password:
 
 https://<%= @company.namespace %>.1punch.io/password_reset/<%= @token %>
 
-If you don’t use this link within 30 minutes, it will expire. To get a new password reset link, visit https://<%= @company.namespace %>.1punch.io/password_reset
-
 Thanks,
-Your friends at 1Punch
+1Punch team
