--- a/frontend/src/scss/_base.scss
+++ b/frontend/src/scss/_base.scss
@@ -9,6 +9,8 @@
   background: $gray-color-lightest;
   padding: .8rem 2rem 0 2rem;
   margin-left: 10rem;
+  width: 100%;
+  min-height: 100vh;
 }
 
 .content {
