--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -3,7 +3,7 @@
   svg {
     width: .7rem;
     height: .7rem;
-    color: $primary-color;
+    color: $gray-color-dark;
   }
   &.table-hover {
     tbody {
