Change application.css to application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,22 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
  */
+
+.auth-form {
+  background-color: #fff;
+  margin-top: 80px;
+  width: 400px;
+  img {
+    height: 100px;
+    width: auto;
+  }
+  .panel-body {
+    padding-bottom: .8rem;
+  }
+
+  .toast {
+    margin-bottom: 10px;
+  }
+}
