--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 <link rel="icon" sizes="192x192" href="">
 
 <link rel="stylesheet" href="<%= @webpack_assets['app.css'] %>">
+<%= csrf_meta_tags %>
 </head>
 
 <body>
