--- a/app/views/auth/new.html.erb
+++ b/app/views/auth/new.html.erb
@@ -5,23 +5,23 @@
   <div class="panel">
     <div class="panel-header text-center">
       <figure class="figure">
-        <img src="<%= image_url('logo.png') %>" alt="Company's Logo">
+        <img src="<%= current_company.logo_url %>" alt="<%= current_company.name %>">
       </figure>
-      <h1 class="panel-title h3 mt-10">Sign in to 1PAC Vietnam</h1>
+      <h1 class="panel-title h3 mt-10"><%= t('auth.new.title', company: current_company.name) %></h1>
     </div>
     <div class="panel-body">
       <%= form_with(model: @user, url: login_url, method: :post, local: true) do |f| %>
         <div class="form-group">
-          <%= f.email_field :email, class: 'form-input', placeholder: 'Email', value: @user.email %>
+          <%= f.email_field :email, class: 'form-input', placeholder: t('auth.new.email'), value: @user.email %>
         </div>
         <div class="form-group">
-          <%= f.password_field :password, class: 'form-input', placeholder: 'Password' %>
+          <%= f.password_field :password, class: 'form-input', placeholder: t('auth.new.password') %>
         </div>
         <div class="form-group">
-          <%= f.submit 'Sign In', class: 'btn btn-success btn-block' %>
+          <%= f.submit t('auth.new.sign_in'), class: 'btn btn-success btn-block' %>
         </div>
         <div class="form-group">
-          <%= link_to 'Forgot your password?', password_reset_url %>
+          <%= link_to t('auth.new.forgot_password'), password_reset_url %>
         </div>
       <% end %>
     </div>
