--- a/app/views/password_reset/edit.html.erb
+++ b/app/views/password_reset/edit.html.erb
@@ -1,25 +1,21 @@
 <div class="auth-form centered">
   <div class="panel">
     <div class="panel-header text-center">
-      <h1 class="panel-title h3 mt-10">Reset your password</h1>
+      <h1 class="panel-title h3 mt-10"><%= t('password_reset.edit.title') %></h1>
     </div>
     <div class="panel-body">
       <%= form_with(model: @user, url: edit_password_reset_path(@user.reset_password_token), method: :post, local: true) do |f| %>
         <%= f.hidden_field :reset_password_token %>
         <div class="form-group <%= 'has-error' if @user.errors.messages[:password].present? %>">
-          <%= f.password_field :password, class: 'form-input', placeholder: 'Password' %>
-          <% if @user.errors.messages[:password].present? %>
-          <p class="form-input-hint"><%= @user.errors.full_messages_for(:password).first %></p>
-          <% end %>
+          <%= f.password_field :password, class: 'form-input', placeholder: t('password_reset.edit.password') %>
+          <%= error_message(@user.errors, :password) %>
         </div>
         <div class="form-group <%= 'has-error' if @user.errors.messages[:password_confirmation].present? %>">
-          <%= f.password_field :password_confirmation, class: 'form-input', placeholder: 'Password Confirmation' %>
-          <% if @user.errors.messages[:password_confirmation].present? %>
-          <p class="form-input-hint"><%= @user.errors.full_messages_for(:password_confirmation).first %></p>
-          <% end %>
+          <%= f.password_field :password_confirmation, class: 'form-input', placeholder: t('password_reset.edit.password_confirmation') %>
+          <%= error_message(@user.errors, :password_confirmation) %>
         </div>
         <div class="form-group">
-          <%= f.submit 'Reset Password', class: 'btn btn-success btn-block' %>
+          <%= f.submit t('password_reset.edit.reset_password'), class: 'btn btn-success btn-block' %>
         </div>
       <% end %>
     </div>
