--- a/app/views/password_reset/new.html.erb
+++ b/app/views/password_reset/new.html.erb
@@ -4,16 +4,16 @@
 
   <div class="panel">
     <div class="panel-header text-center">
-      <h1 class="panel-title h3 mt-10">Forgot your password?</h1>
-      <p class="panel-subtitle">Enter the email address you use to sign in, and we’ll send you a link to reset your password.</p>
+      <h1 class="panel-title h3 mt-10"><%= t('password_reset.new.title') %></h1>
+      <p class="panel-subtitle"><%= t('password_reset.new.description') %></p>
     </div>
     <div class="panel-body">
       <%= form_with(model: @user, url: password_reset_url, method: :post, local: true) do |f| %>
         <div class="form-group">
-          <%= f.email_field :email, class: 'form-input', placeholder: 'Email' %>
+          <%= f.email_field :email, class: 'form-input', placeholder: t('password_reset.new.email') %>
         </div>
         <div class="form-group">
-          <%= f.submit 'Send Link', class: 'btn btn-success btn-block' %>
+          <%= f.submit t('password_reset.new.send_link'), class: 'btn btn-success btn-block' %>
         </div>
       <% end %>
     </div>
