Correct css a little bit

--- a/frontend/src/scss/_pagination.scss
+++ b/frontend/src/scss/_pagination.scss
@@ -1,6 +1,14 @@
-// Pagination
 .pagination {
   justify-content: center;
+
+  .page-item {
+    &.active,
+    &:hover {
+      svg {
+        color: $primary-color;
+      }
+    }
+  }
 
   svg {
     cursor: pointer;
