Make add/edit request modal

--- a/frontend/src/scss/_datepicker.scss
+++ b/frontend/src/scss/_datepicker.scss
@@ -12,6 +12,15 @@
 
 	.datepicker-calendar {
 	}
+
+  &-full-width {
+    display: block;
+    width: 100%;
+
+    .datepicker-input {
+      background-position: 98% 50%;
+    }
+  }
 }
 
 .datepicker-calendar {
