Update button css

--- a/frontend/src/scss/_utilities.scss
+++ b/frontend/src/scss/_utilities.scss
@@ -26,6 +26,15 @@
   overflow: hidden;
 }
 
+.avatar.avatar-lg {
+  background: transparent;
+
+  svg {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
+}
+
 @include margin-variant(4, $unit-4); //Margin variant .8rem
 @include padding-variant(4, $unit-4); //Padding variation .8rem
 @include margin-variant(5, $unit-5); //Margin variant 1rem
