--- a/frontend/src/scss/_utilities.scss
+++ b/frontend/src/scss/_utilities.scss
@@ -22,6 +22,10 @@
   max-height: 130px;
 }
 
+.hidden-overflow {
+  overflow: hidden;
+}
+
 @include margin-variant(4, $unit-4); //Margin variant .8rem
 @include padding-variant(4, $unit-4); //Padding variation .8rem
 @include margin-variant(5, $unit-5); //Margin variant 1rem
