--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -75,6 +75,7 @@
 @import 'setting';
 @import 'datepicker';
 @import 'toolbar';
+@import 'title';
 
 // Utility classes
 @import '../../node_modules/spectre.css/src/animations';
