Improve pagination style a bit

--- a/frontend/src/scss/_pagination.scss
+++ b/frontend/src/scss/_pagination.scss
@@ -8,6 +8,14 @@
         color: $primary-color;
       }
     }
+
+    a {
+      width: 1.8rem;
+      text-align: center;
+      &:focus {
+        box-shadow: none;
+      }
+    }
   }
 
   svg {
