Fix scss-lint warning

--- a/frontend/src/scss/_base.scss
+++ b/frontend/src/scss/_base.scss
@@ -15,7 +15,7 @@ main {
 
 .main {
   background: $gray-color-lightest;
-  padding: .8rem 2rem 0 2rem;
+  padding: .8rem 2rem 0;
   margin-left: 10rem;
   width: 100%;
   min-height: 100vh;
