--- a/frontend/src/scss/_box.scss
+++ b/frontend/src/scss/_box.scss
@@ -10,11 +10,9 @@
       &:hover {
         color: $primary-color;
       }
-    }
-
-    h2 + span {
-      font-size: .8rem;
-      color: $gray-color;
+      + span { font-size: .8rem;
+        color: $gray-color;
+      }
     }
 
     .form-select {
