--- a/frontend/src/scss/_navbar.scss
+++ b/frontend/src/scss/_navbar.scss
@@ -54,11 +54,13 @@
     }
   }
 
-  .menu .menu-item > a:focus,
-  .menu .menu-item > a:hover,
-  .menu .menu-item > a:active,
-  .menu .menu-item > a.active {
-    background-color: inherit;
+  .menu .menu-item > a {
+    &:focus,
+    &:hover,
+    &:active,
+    &.active {
+      background-color: inherit;
+    }
   }
 }
 
