--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -64,7 +64,7 @@
 @import 'pagination';
 @import 'toast';
 @import 'accordions';
-@import "tabs";
+@import 'tabs';
 
 // Experimentals
 @import '../../node_modules/spectre.css/src/calendars';
