--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -76,6 +76,7 @@
 @import 'datepicker';
 @import 'toolbar';
 @import 'title';
+@import 'punch';
 
 // Utility classes
 @import '../../node_modules/spectre.css/src/animations';
